recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:12: error: value Red is not a member of object java.awt.Color
  setColor(Color.Red)
                 ^